# FOINC

./: .gitignore  CLAUDE.md  Cargo.toml  ROADMAP.md  TECHNICAL_PAPER.md  WHITE_PAPER.md  constitution.md  docker-compose.yml
.claude/: settings.local.json
agents/: architect.md  bug-hunter.md  code-reviewer.md  code-writer.md  compositor.md  spec-reviewer.md  spec-writer.md  test-reviewer.md  test-writer.md
backend/: Cargo.toml
backend/src/: main.rs
examples/bioinformatics/: analyze_sequence.py  generate_sequences.py  sequences.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  ToastContainer.vue  VolunteerView.vue
frontend/src/api/: upload.ts
frontend/src/types/: job.ts
integrations/: Cargo.toml
integrations/src/: lib.rs
integrations/ui/: events.ts  notifications.ts  types.ts
migrations/: 001_create_jobs.sql  002_create_tasks.sql  003_extend_job_status.sql  004_add_consensus_fields.sql
modules/progress-tracking/: spec.md
modules/pyodide-runtime/: spec.md
modules/pyodide-runtime/ui/: DryRunForm.vue  DryRunPanel.vue  DryRunResults.vue  dryRun.ts  pyodideWorker.ts  worker.ts
modules/pyodide-runtime/ui/__tests__/: DryRunForm.test.ts  DryRunPanel.test.ts  DryRunResults.test.ts  dryRun.integration.test.ts  dryRun.test.ts  pyodideWorker.test.ts  worker.source.test.ts
modules/result-aggregation/: Cargo.toml  spec.md
modules/result-aggregation/src/: aggregate.rs  consensus.rs  handlers.rs  lib.rs  normalize.rs
modules/result-aggregation/ui/: DownloadResultButton.vue
modules/result-aggregation/ui/__tests__/: DownloadResultButton.test.ts
modules/task-distribution/: Cargo.toml  spec.md
modules/task-distribution/src/: csv_split.rs  db.rs  handlers.rs  lib.rs
modules/task-distribution/ui/: StartJobButton.vue  VolunteerRunner.vue  api.ts
modules/task-distribution/ui/__tests__/: StartJobButton.test.ts  VolunteerRunner.test.ts  api.test.ts
modules/upload/: Cargo.toml  spec.md
modules/upload-and-preview/: spec.md
modules/upload/src/: db.rs  handlers.rs  lib.rs  storage.rs  validation.rs
modules/upload/ui/: UploadForm.vue  UploadStatus.vue  api.ts
modules/upload/ui/__tests__/: UploadForm.test.ts  api.test.ts
modules/volunteer-ui/: spec.md
