[package]
name = "foinc-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foinc-backend"
path = "src/main.rs"

[dependencies]
foinc-integrations = { path = "../integrations" }
foinc-upload = { path = "../modules/upload" }
foinc-task-distribution = { path = "../modules/task-distribution" }
foinc-result-aggregation = { path = "../modules/result-aggregation" }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
