[package]
name = "foinc-task-distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
foinc-integrations = { path = "../../integrations" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
axum = { version = "0.8" }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
